cmake_minimum_required(VERSION 3.0)
project(lanelet2)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(SKIP_STD)

# declare dependencies
set(lanelet2_io_LIBRARIES lanelet2_core)
set(lanelet2_projection_LIBRARIES lanelet2_core)
set(lanelet2_traffic_rules_LIBRARIES lanelet2_core)
set(lanelet2_routing_LIBRARIES lanelet2_core lanelet2_traffic_rules)
set(lanelet2_validation_LIBRARIES lanelet2_core lanelet2_io lanelet2_routing lanelet2_traffic_rules lanelet2_projection)
set(lanelet2_examples_LIBRARIES lanelet2_core lanelet2_io lanelet2_routing lanelet2_traffic_rules lanelet2_projection)
set(lanelet2_python_LIBRARIES lanelet2_core lanelet2_io lanelet2_routing lanelet2_traffic_rules)
include_directories(lanelet2_core/include lanelet2_io/include lanelet2_projection/include lanelet2_traffic_rules/include
    lanelet2_routing/include lanelet2_validation/include)
add_subdirectory(lanelet2_core)
add_subdirectory(lanelet2_io)
add_subdirectory(lanelet2_projection)
add_subdirectory(lanelet2_traffic_rules)
add_subdirectory(lanelet2_routing)
add_subdirectory(lanelet2_validation)
add_subdirectory(lanelet2_examples)
#add_subdirectory(lanelet2_python)
add_subdirectory(lanelet2_maps)
#include("${CMAKE_CURRENT_LIST_DIR}/lanelet2_io/CMakeLists.cmake")
#include("${CMAKE_CURRENT_LIST_DIR}/lanelet2_projection/CMakeLists.cmake")
#include("${CMAKE_CURRENT_LIST_DIR}/lanelet2_traffic_rules/CMakeLists.cmake")
#include("${CMAKE_CURRENT_LIST_DIR}/lanelet2_routing/CMakeLists.cmake")
#include("${CMAKE_CURRENT_LIST_DIR}/lanelet2_validation/CMakeLists.cmake")
